Deploy fixed feedback privacy wrap

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -330,6 +330,10 @@
     }
 
     &-link {
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 24px;
+      letter-spacing: 0.16px;
       &:hover {
         color: var(--clr-white);
       }
